
######################
#                    #
#     2021.11.3      #
#                    #
######################
New features and other changes:
1. Save-UpdateHistory had several changes including but not limited to: default day value was updated to include an additional day, added BypassCopy switch, now saves to a local file and to location in UHPath if it exists.

######################
#                    #
#     2021.11.2      #
#                    #
######################
New features and other changes:
1. Changed function Add-JavaException to Add-UserJavaException. It strictly only modifies the exceptions.site file in the user profile and not machine wide.
2. Added JException config item and added Set-JavaException with alias Add-JavaException.
3. Fixed issue with Copy-VisualStudioCode and Install-VisualStudioCode not copying all files in source folder.
4. Added functions Get-CertificateInventory and Set-RemoteDesktopCert (alias Set-RDPCert.)

######################
#                    #
#     2021.11.1      #
#                    #
######################
New features and other changes:
1. Added VSCodeSettingsPath config item and function Copy-VSCodeSettingsToProfile.
2. In WSTools Tray App, moved VS Code items to their own menu, changed some wording, and added some functionality.
3. Changed config file versioning to Year.Month.Revision.
4. Added VSCodeExtRepo config item and function Copy-VSCodeExtensions.

######################
#                    #
#      2021.10       #
#                    #
######################
New features and other changes:
1. Added message to Set-Preferences about needing to log off then back in.
2. Added MECM config file item.
3. Added function Install-MECM.
4. Modified Copy-PowerShellJSON to create User and snippets folders if they don't already exist. $env:APPDATA\Code still has to exist or it will fail.
5. Fixed a variable issue in Test-EmailRelay. Body now appropriately shows recipient address.